# QrHex

./: .gitignore  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  LICENSE  README.md  build.zig
qrGo/: go.mod  main.go  mise.toml
qrRust/: Cargo.toml  README.md  mise.toml
qrRust/.agents/: RUST_QUICKSTART.md  RUST_RULES.md
qrRust/src/: cli.rs  errors.rs  file_io.rs  hex_dump.rs  main.rs  patch.rs
qrZig/: build.zig.zon  mise.toml
qrZig/src/: main.zig
src/: main.zig
